# simple-todo

./: README.md  meson.build
DEBIAN/: createDebPackage.sh
DEBIAN/simple-todo/DEBIAN/: control
data/: resources.xml  simple-todo.desktop
src/: Main.vala  MainWindow.vala  TodoItem.vala
